# turnboard-timebank

./: .gitignore  CHANGELOG.md  README.md  export_presets.cfg  icon.svg.import  project.godot  pyproject.toml
autoload/: GameController.gd
docs/: IMPLEMENTATION_CONTEXT.md  architecture_tz_variant2.md  product_spec_v1.md  specification.md
domain/: Const.gd  Decider.gd  Model.gd  Reducer.gd  Util.gd
infra/: Logger.gd  SoundService.gd  Storage.gd
scenes/: main.tscn
scripts/: control.gd  control.gd.uid
src/timebank_app/: __init__.py  __main__.py
src/timebank_app/app/: controller.py
src/timebank_app/domain/: commands.py  engine.py  events.py  models.py
src/timebank_app/infra/: effects.py  logging.py  storage.py
src/timebank_app/ui/: formatting.py  main.py
tests/: test_controller_infra.py  test_engine.py  test_formatting.py
ui/: Game.gd  Game.tscn  Main.gd  Main.tscn  PasswordSetup.gd  PasswordSetup.tscn  Pause.gd  Pause.tscn  Setup.gd  Setup.tscn
