[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turnboard-timebank"
version = "0.1.0"
description = "Android-focused Flet turnboard timebank app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flet==0.80.5",
  "flet-color-pickers>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "pylint>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["PLR0913"]

[tool.pylint.main]
py-version = "3.11"
ignore-paths = ["tests/"]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "duplicate-code",
]
